# LedgerLens

./: .env.example  .gitignore  CURSOR.md  README.md  ledgerlens_frontend_complete.md  ledgerlens_workspace_screens.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml
apps/api/: .env.example  Dockerfile  main.py  pyproject.toml  railway.toml  requirements.txt  serve.py
apps/api/api/: __init__.py  middleware.py  refresh_throttle.py
apps/api/api/routes/: bookmarks.py  charts.py  chat.py  companies.py  health.py  sources.py  workspace.py
apps/api/charts/: transformer.py
apps/api/data/: company_tickers.json
apps/api/data_sources/: fred.py  http_tools.py  news_a.py  news_b.py  news_c.py  normalizer.py  refresh_pipeline.py  sec.py  web_search.py
apps/api/database/: __init__.py  config.py  models.py  repository.py  session.py
apps/api/ingestion/: chunker.py  parser.py  pipeline.py
apps/api/llm/: config.py  context_cleanup.py  followups.py  groq_client.py  ollama.py  orchestrator.py  prompts.py  streaming.py
apps/api/memory/: models.py  persistence.py  sec_company_index.py  session.py
apps/api/observability/: feedback.py  logger.py  tracer.py
apps/api/retrieval/: assembler.py  chunk_split.py  query.py  reranker.py  vector_store.py
apps/api/schemas/: chart.py  chat.py  source.py  workspace.py
apps/api/tests/: test_chunk_split.py  test_health.py  test_web_search.py
docs/: api-spec.md  architecture.md  data-sources.md  project-work-log.md
scripts/: seed-db.ts  test-sources.py
(+75 files in other folders)
