[project]
name = "ledgerlens-api"
version = "0.0.1"
description = "FastAPI backend for LedgerLens"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "httpx==0.28.1",
  "sqlalchemy==2.0.36"
]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
